--- a/index.html
+++ b/index.html
@@ -170,8 +170,94 @@
                     <ul>
                         <li>
                             <h3>
+                                <span>[项目]微信程序</span>
+                                <time>2020.8-9</time>
+                            </h3>
+                            <ul class="info-content">
+                                <li>技术栈：微信公众号...</li>
+                                <li>
+                                    <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
+                                    [目标]这是一个展示课程资源的微信端项目<br/>
+                                    <i class="fa fa-users" aria-hidden="true"></i>
+                                    <div style="width: 100%">
+                                        <img style="width:48%" src="assets/images/weixin1.jpg" alt="">
+                                        <img style="width:48%" src="assets/images/weixin2.jpg" alt="">
+                                        <img style="width:48%" src="assets/images/weixin3.jpg" alt="">
+                                        <img style="width:48%" src="assets/images/weixin4.jpg" alt="">
+                                    </div>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <h3>
+                                <span>[项目]大屏数据展示平台</span>
+                                <time>2020.6-7</time>
+                            </h3>
+                            <ul class="info-content">
+                                <li>技术栈：js+jq+Bmap-api+echarts+小鱼sdk...</li>
+                                <li>
+                                    <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
+                                    [目标]这是一个对外展示公司业务的大屏幕项目<br/>
+                                    <i class="fa fa-users" aria-hidden="true"></i>
+                                    <img style="width:100%" src="assets/images/dashboard.jpg" alt="">
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <h3>
+                                <span>[项目]英语学习客户端软件（window客户端项目）</span>
+                                <time>2019.10-12</time>
+                            </h3>
+                            <ul class="info-content">
+                                <li>技术栈：vue+electron+element-ui+echarts+ai-player...</li>
+                                <li>
+                                    <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
+                                    [目标]外教老师和学生互动软件<br/>
+                                    <i class="fa fa-users" aria-hidden="true"></i>
+                                    <img style="width:100%" src="assets/images/teacher.jpg" alt="">
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <h3>
+                                <span>[项目]英语学习平台系统</span>
+                                <time>2019.6-8</time>
+                            </h3>
+                            <ul class="info-content">
+                                <li>技术栈：vue+vue-admin+echarts+ai-player...</li>
+                                <li>
+                                    <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
+                                    [目标]一个学生查看课程安排系统<br/>
+                                    <i class="fa fa-users" aria-hidden="true"></i>
+                                    <img style="width:100%" src="assets/images/personcenter.jpg" alt="">
+                                    <img style="width:100%" src="assets/images/personstudy.jpg" alt="">
+                                    <img style="width:100%" src="assets/images/enterstudio.jpg" alt="">
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <h3>
+                                <span>[项目]移动端手机app</span>
+                                <time>2019.8-10</time>
+                            </h3>
+                            <ul class="info-content">
+                                <li>技术栈：uni-app+vue+原生js+uni官网插件市场</li>
+                                <li>
+                                    <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
+                                    [目标]这是一个js编写的移动端app<br/>
+                                    <i class="fa fa-users" aria-hidden="true"></i>
+                                    <div style="width: 100%">
+                                        <img style="width:31%" src="assets/images/uni1.jpg" alt="">
+                                        <img style="width:31%" src="assets/images/uni2.jpg" alt="">
+                                        <img style="width:31%" src="assets/images/uni3.jpg" alt="">
+                                    </div>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <h3>
                                 <span>[项目]应急广播平台</span>
-                                <time>2019.4-至今</time>
+                                <time>2019.4-6</time>
                             </h3>
                             <ul class="info-content">
                                 <li>技术栈：react+ice-work+leafletJS+echarts...</li>
@@ -231,6 +317,23 @@
                                     <i class="fa fa-bars" aria-hidden="true"></i>
                                     [贡献]主要负责原型图的切取，加以c3动画更好的呈现公司业务，及调用百度推广api<br/>
                                     <img style="width:100%" src="assets/images/very.jpg" alt="">
+                            </ul>
+                        </li>
+                        <li>
+                            <h3>
+                                <span>[项目1]公司官网</span>
+                                <time>201X.X-201X.X</time>
+                            </h3>
+                            <ul class="info-content">
+                                <li>技术栈：h5+c3+jq</li>
+                                <li>
+                                    <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
+                                    [目标]展示公司的企业文化和业务范畴<br/>
+                                    <i class="fa fa-users" aria-hidden="true"></i>
+                                    [团队]自己<br/>
+                                    <i class="fa fa-bars" aria-hidden="true"></i>
+                                    [贡献]主要负责原型图的切取，加以c3动画更好的呈现公司业务，及调用百度推广api<br/>
+                                    <img style="width:100%" src="assets/images/aienglish.jpg" alt="">
                             </ul>
                         </li>
                         <li>
