--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                             <h3><span>江阴职业技术学院 - 计算机网络</span><time>2014.9-2017.6</time></h3>
                         </li>
                     </ul>
-                </section>
+                </section> -->
 
                 <!-- 工作经历 -->
                 <section class="work info-unit">
