--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
             <section class="main">
 
-                <!-- 教育经历 -->
+                <!-- 教育经历
                 <section class="edu info-unit">
                     <h2><i class="fa fa-graduation-cap" aria-hidden="true"></i>教育经历</h2>
                     <hr/>
