--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     <hr/>
                     <ul>
                         <li>
-                            <h3><span>江阴职业技术学院 - 计算机网络</span><time>2014.9-2017.6</time></h3>
+                            <h3><span>******学院 - 计算机网络</span><time>2014.9-2017.6</time></h3>
                         </li>
                     </ul>
                 </section> -->
@@ -200,6 +200,21 @@
                                     [目标]这是一个对外展示公司业务的大屏幕项目<br/>
                                     <i class="fa fa-users" aria-hidden="true"></i>
                                     <img style="width:100%" src="assets/images/dashboard.jpg" alt="">
+                                </li>
+                            </ul>
+                        </li>
+			<li>
+                            <h3>
+                                <span>[项目]大屏医院医疗数据展示平台</span>
+                                <time>2020.6-7</time>
+                            </h3>
+                            <ul class="info-content">
+                                <li>技术栈：js+jq+Bmap-api+echarts...</li>
+                                <li>
+                                    <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
+                                    [目标]这是一个对外展示市区医疗健康平台的大屏幕项目<br/>
+                                    <i class="fa fa-users" aria-hidden="true"></i>
+                                    <img style="width:100%" src="assets/images/health.jpg" alt="">
                                 </li>
                             </ul>
                         </li>
