--- a/index.html
+++ b/index.html
@@ -122,16 +122,16 @@
 
             <section class="main">
 
-                <!-- 教育经历
+                <!-- 教育经历  -->
                 <section class="edu info-unit">
                     <h2><i class="fa fa-graduation-cap" aria-hidden="true"></i>教育经历</h2>
                     <hr/>
                     <ul>
                         <li>
-                            <h3><span>******学院 - 计算机网络</span><time>2014.9-2017.6</time></h3>
+                            <h3><span>江阴职业技术学院 - 计算机网络</span><time>2014.9-2017.6</time></h3>
                         </li>
                     </ul>
-                </section> -->
+                </section>
 
                 <!-- 工作经历 -->
                 <section class="work info-unit">
@@ -349,6 +349,40 @@
                                     <i class="fa fa-bars" aria-hidden="true"></i>
                                     [贡献]主要负责原型图的切取，加以c3动画更好的呈现公司业务，及调用百度推广api<br/>
                                     <img style="width:100%" src="assets/images/aienglish.jpg" alt="">
+                            </ul>
+                        </li>
+						<li>
+                            <h3>
+                                <span>[项目1]数据微服务总线</span>
+                                <time>201X.X-201X.X</time>
+                            </h3>
+                            <ul class="info-content">
+                                <li>技术栈：vue+stylus+数据流程图</li>
+                                <li>
+                                    <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
+                                    [目标]独立医疗业务工具系统<br/>
+                                    <i class="fa fa-users" aria-hidden="true"></i>
+                                    [团队]自己<br/>
+                                    <i class="fa fa-bars" aria-hidden="true"></i>
+                                    [贡献]用于数据总线监控设备负载均衡监控<br/>
+                                    <img style="width:100%" src="assets/images/msb.jpg" alt="">
+                            </ul>
+                        </li>
+						<li>
+                            <h3>
+                                <span>[项目1]医疗数据监控</span>
+                                <time>201X.X-201X.X</time>
+                            </h3>
+                            <ul class="info-content">
+                                <li>技术栈：h5+c3+jq</li>
+                                <li>
+                                    <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
+                                    [目标]实施可配置型医疗监控产品<br/>
+                                    <i class="fa fa-users" aria-hidden="true"></i>
+                                    [团队]自己<br/>
+                                    <i class="fa fa-bars" aria-hidden="true"></i>
+                                    [贡献]监控统计医疗数据<br/>
+                                    <img style="width:100%" src="assets/images/yldp.jpg" alt="">
                             </ul>
                         </li>
                         <li>
