--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <ul>
                         <li>
                             <label>个人信息</label>
-                            <span>黄金苏 / 男 / 26岁</span>
+                            <span>黄金苏 / 男 /  <i id="age">999</i> 岁</span>
                         </li>
                         <li>
                             <label>计算机水平</label>
