--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
         <meta http-equiv="Pragma" content="no-cache" />
         <meta http-equiv="Expires" content="0" />
-    	<title>[简历]黄金苏-前端开发工程师/无锡</title>
+    	<title>[简历]**苏-前端开发工程师/无锡</title>
     	<link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="assets/css/typo.css">
         <link rel="stylesheet" href="assets/css/font-awesome.min.css">
@@ -43,10 +43,10 @@
                             <span></span>
                         </div>
                         <!-- 头像照片 -->
-                        <img class="avatar" src="assets/images/hjs.jpg" onload="loadings()">
+                        <img class="avatar" src="assets/images/default.jpg" onload="loadings()">
                     </section>
 
-                    <h1 class="name">黄金苏</h1>
+                    <h1 class="name">**苏</h1>
                     <h4 class="info-job">前端开发工程师 / 无锡</h4>
 
                 </section>
@@ -58,7 +58,7 @@
                     <ul>
                         <li>
                             <label>个人信息</label>
-                            <span>黄金苏 / 男 /  <i id="age">999</i> 岁</span>
+                            <span>**苏 / 男 /  <i id="age">999</i> 岁</span>
                         </li>
                         <li>
                             <label>计算机水平</label>
@@ -128,7 +128,7 @@
                     <hr/>
                     <ul>
                         <li>
-                            <h3><span>江阴职业技术学院 - 计算机网络</span><time>2014.9-2017.6</time></h3>
+                            <h3><span>**学院 - 计算机网络</span><time>2014.9-2017.6</time></h3>
                         </li>
                     </ul>
                 </section>
