--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                             <time>2019.6-8</time>
                         </h3>
                         <ul class="info-content">
-                            <li>技术栈：vue+vue-admin+echarts+ai-player...</li>
+                            <li>技术栈：vue+vue-admin...</li>
                             <li>
                                 <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
                                 [目标]一个学生查看课程安排系统<br />
