--- a/index.html
+++ b/index.html
@@ -243,12 +243,12 @@
                             <time>2019.10-12</time>
                         </h3>
                         <ul class="info-content">
-                            <li>技术栈：vue+electron+element-ui+echarts+ai-player...</li>
+                            <li>技术栈：vue+electron+element-ui+echarts...</li>
                             <li>
                                 <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
                                 [目标]外教老师和学生互动软件<br />
                                 <i class="fa fa-users" aria-hidden="true"></i>
-                                <img style="width:100%" src="assets/images/teacher.jpg" alt="">
+                                <img style="width:100%" src="assets/images/persongame.jpg" alt="">
                             </li>
                         </ul>
                     </li>
