--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                                 <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
                                 [目标]外教老师和学生互动软件<br />
                                 <i class="fa fa-users" aria-hidden="true"></i>
-                                <img style="width:100%" src="assets/images/persongame.jpg" alt="">
+                                <img style="width:100%" src="assets/images/persongame.png" alt="">
                             </li>
                         </ul>
                     </li>
