--- a/index.html
+++ b/index.html
@@ -434,8 +434,8 @@
                                 [团队]his项目组<br />
                                 <i class="fa fa-bars" aria-hidden="true"></i>
                                 [贡献]对接阿里云服务接口，实现医生患者实时视频对话系统；<text style="color: red;">（类似微信功能）</text><br />
-                                <img style="width:351px;height: 500px;" src="assets/images/webscoker.jpg" alt="">
-                                <img style="width:45%;height: 500px;" src="assets/images/video.jpg" alt="">
+                                <img style="width:48%;max-width:351px;height: 500px;" src="assets/images/webscoker.jpg" alt="">
+                                <img style="width:45%;max-width:351px;height: 500px;" src="assets/images/video.jpg" alt="">
                         </ul>
                     </li>
                     <li>
