--- a/index.html
+++ b/index.html
@@ -239,11 +239,11 @@
                     </li>
                     <li>
                         <h3>
-                            <span>[项目]英语学习客户端软件（window客户端项目）</span>
+                            <span>[项目]英语学习软件</span>
                             <time>2019.10-12</time>
                         </h3>
                         <ul class="info-content">
-                            <li>技术栈：vue+electron+element-ui+echarts...</li>
+                            <li>技术栈：vue+element-ui+echarts...</li>
                             <li>
                                 <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
                                 [目标]外教老师和学生互动软件<br />
@@ -270,7 +270,7 @@
 
                     <li>
                         <h3>
-                            <span>[项目]英语学习客户端系统</span>
+                            <span>[项目]英语学习客户端系统（window客户端项目）</span>
                             <time>2019.6-8</time>
                         </h3>
                         <ul class="info-content">
