--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                             <li>负责公司his项目组的开发设计</li>
                             <li>负责公司empi、hsb、cda、数据治理、病历质控项目开发</li>
                             <li>负责公司电子病历编辑器开发</li>
-                            <li>负责公司医生患者客户端开发</li>
+                            <li>负责公司医生患者移动客户端开发</li>
                         </ul>
                     </li>
                 </ul>
