--- a/index.html
+++ b/index.html
@@ -139,6 +139,15 @@
                     </li>
                 </ul>
             </section>
+            <section class="edu info-unit">
+                <h2><i class="fa fa-graduation-cap" aria-hidden="true"></i>教育经历</h2>
+                <hr />
+                <ul>
+                    <li>
+                        <h3><span>**学院 - 计算机科学与技术</span><time>2024.9-2026.6</time></h3>
+                    </li>
+                </ul>
+            </section>
 
             <!-- 工作经历 -->
             <section class="work info-unit">
