--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
                             <time>2021.9-至今</time>
                         </h3>
                         <ul class="info-content">
-                            <li>技术栈：vue3+ts+element-plus+自主架设的前端框架</li>
+                            <li>技术栈：vue3+TypeScript+element-plus+canvas渲染+自主搭建的前端框架</li>
                             <li>
                                 <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
                                 [目标]实现门诊住院患者智能看病系统<br />
