--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <img class="avatar" src="assets/images/default.jpg" onload="loadings()">
                 </section>
 
-                <h1 class="name">**苏</h1>
+                <h1 class="name">黄金苏</h1>
                 <h4 class="info-job">前端开发工程师 / 无锡</h4>
 
             </section>
@@ -61,7 +61,7 @@
                 <ul>
                     <li>
                         <label>个人信息</label>
-                        <span>**苏 / 男 / <i id="age">999</i> 岁</span>
+                        <span> 男 / <i id="age">999</i> 岁</span>
                     </li>
                     <li>
                         <label>计算机水平</label>
@@ -130,7 +130,7 @@
         <section class="main">
 
             <!-- 教育经历  -->
-            <section class="edu info-unit">
+            <!-- <section class="edu info-unit">
                 <h2><i class="fa fa-graduation-cap" aria-hidden="true"></i>教育经历</h2>
                 <hr />
                 <ul>
@@ -141,7 +141,7 @@
                         <h3><span>**学院 - 计算机科学与技术</span><time>2024.9-2026.6</time></h3>
                     </li>
                 </ul>
-            </section>
+            </section> -->
 
             <!-- 工作经历 -->
             <section class="work info-unit">
